force-app/main/default/objects/Reimbursement_Item__c/Reimbursement_Item__c.object-meta.xml
<CustomObject>
    <label>Reimbursement Item</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Reimbursement Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reimbursement Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>