force-app/main/default/objects/Reimbursement_Item__c/fields/Apply_Cap__c.field-meta.xml
<CustomField>
    <fullName>Apply_Cap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Cap</label>
    <type>Checkbox</type>
</CustomField>