force-app/main/default/objects/Reimbursement_Item__c/fields/Approved_Indirect_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Indirect_Rate_Amount__c</fullName>
    <formula
  >IF(RecordType.Name = &apos;Expense&apos;,  Approved_Amount__c * Indirect_Rate__c,
IF(TEXT(Type__c) = &apos;Personnel&apos;,  Approved_Salary__c * Indirect_Rate__c,
IF(TEXT(Type__c) = &apos;Fringe&apos;,  Approved_Benefits__c * Indirect_Rate__c,
0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Indirect Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>