force-app/main/default/objects/Reimbursement_Item__c/fields/Approved_Not_Equal_To_Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Not_Equal_To_Requested_Amount__c</fullName>
    <formula>OR(
AND(RecordType.Name = &apos;Expense&apos;, Requested_Amount__c != Approved_Amount__c),
AND(RecordType.Name = &apos;Labor&apos;, Requested_Salary__c != Approved_Salary__c),
AND(RecordType.Name = &apos;Labor&apos;, Requested_Benefits__c != Approved_Benefits__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Not Equal To Requested Amount</label>
    <type>Checkbox</type>
</CustomField>