force-app/main/default/objects/Reimbursement_Item__c/fields/Approved_Salary__c.field-meta.xml
<CustomField>
    <fullName>Approved_Salary__c</fullName>
    <label>Approved Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>