force-app/main/default/objects/Reimbursement_Item__c/fields/Budget_Item__c.field-meta.xml
<CustomField>
    <fullName>Budget_Item__c</fullName>
    <label>Budget Item</label>
    <referenceTo>Budget_Item__c</referenceTo>
    <relationshipLabel>Reimbursement Items</relationshipLabel>
    <relationshipName>Reimbursement_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>