force-app/main/default/objects/Reimbursement_Item__c/fields/Budgeted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Amount__c</fullName>
    <formula
  >IF(RecordType.Name = &apos;Expense&apos;, Budget_Item__r.Item_Budget__c, 
IF(TEXT(Type__c) = &apos;Personnel&apos;, Budget_Item__r.Wages__c,
IF(TEXT(Type__c) = &apos;Fringe&apos;, Budget_Item__r.Fringe_Benefits__c,
0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >IF(RecordType.Name = &apos;Expense&apos;, Budget_Item__r.Item_Budget__c, 
IF(TEXT(Type__c) = &apos;Personnel&apos;, Budget_Item__r.Wages__c,
IF(TEXT(Type__c) = &apos;Fringe&apos;, Budget_Item__r.Fringe_Benefits__c,
0)))</inlineHelpText>
    <label>Budgeted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>