force-app/main/default/objects/Reimbursement_Item__c/fields/Dental__c.field-meta.xml
<CustomField>
    <fullName>Dental__c</fullName>
    <label>Dental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>