force-app/main/default/objects/Reimbursement_Item__c/fields/Factor_Percent__c.field-meta.xml
<CustomField>
    <fullName>Factor_Percent__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Factor Percent</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>