force-app/main/default/objects/Reimbursement_Item__c/fields/Fringe_Balance__c.field-meta.xml
<CustomField>
    <fullName>Fringe_Balance__c</fullName>
    <formula>Budget_Item__r.Fringe_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Budget Item: Fringe Balance</inlineHelpText>
    <label>Fringe Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>