force-app/main/default/objects/Reimbursement_Item__c/fields/Fringe_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Fringe_Benefit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fringe Benefit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>