force-app/main/default/objects/Reimbursement_Item__c/fields/Grant_Name__c.field-meta.xml
<CustomField>
    <fullName>Grant_Name__c</fullName>
    <formula>Reimbursement_Request__r.Grant__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Name</label>
    <type>Text</type>
</CustomField>