force-app/main/default/objects/Reimbursement_Item__c/fields/Has_Dental__c.field-meta.xml
<CustomField>
    <fullName>Has_Dental__c</fullName>
    <formula
  >AND(NOT(ISNULL(Budget_Item__r.Dental__c)), Budget_Item__r.Dental__c  &gt; 0)</formula>
    <label>Has Dental</label>
    <type>Checkbox</type>
</CustomField>