force-app/main/default/objects/Reimbursement_Item__c/fields/Has_FICA__c.field-meta.xml
<CustomField>
    <fullName>Has_FICA__c</fullName>
    <formula
  >AND(NOT(ISNULL(Budget_Item__r.FICA__c)), Budget_Item__r.FICA__c &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has FICA</label>
    <type>Checkbox</type>
</CustomField>