force-app/main/default/objects/Reimbursement_Item__c/fields/Has_Life__c.field-meta.xml
<CustomField>
    <fullName>Has_Life__c</fullName>
    <formula
  >AND(NOT(ISNULL(Budget_Item__r.Life__c)), Budget_Item__r.Life__c &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Life</label>
    <type>Checkbox</type>
</CustomField>