force-app/main/default/objects/Reimbursement_Item__c/fields/Has_Medical__c.field-meta.xml
<CustomField>
    <fullName>Has_Medical__c</fullName>
    <formula
  >AND(NOT(ISNULL(Budget_Item__r.Medical__c)), Budget_Item__r.Medical__c &gt; 0)</formula>
    <label>Has Medical</label>
    <type>Checkbox</type>
</CustomField>