force-app/main/default/objects/Reimbursement_Item__c/fields/Has_Other_Premium__c.field-meta.xml
<CustomField>
    <fullName>Has_Other_Premium__c</fullName>
    <formula
  >AND(NOT(ISNULL(Budget_Item__r.Other_Premium__c)), Budget_Item__r.Other_Premium__c &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Other Premium</label>
    <type>Checkbox</type>
</CustomField>