force-app/main/default/objects/Reimbursement_Item__c/fields/Has_Retirement__c.field-meta.xml
<CustomField>
    <fullName>Has_Retirement__c</fullName>
    <formula
  >AND(NOT(ISNULL(Budget_Item__r.Retirement__c)), Budget_Item__r.Retirement__c &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Retirement</label>
    <type>Checkbox</type>
</CustomField>