force-app/main/default/objects/Reimbursement_Item__c/fields/Has_Short_Term__c.field-meta.xml
<CustomField>
    <fullName>Has_Short_Term__c</fullName>
    <formula
  >AND(NOT(ISNULL(Budget_Item__r.Short_Term_Disability__c)), Budget_Item__r.Short_Term_Disability__c &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Short Term</label>
    <type>Checkbox</type>
</CustomField>