force-app/main/default/objects/Reimbursement_Item__c/fields/Has_SUTA__c.field-meta.xml
<CustomField>
    <fullName>Has_SUTA__c</fullName>
    <formula
  >AND(NOT(ISNULL(Budget_Item__r.SUTA__c)), Budget_Item__r.SUTA__c &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has SUTA</label>
    <type>Checkbox</type>
</CustomField>