force-app/main/default/objects/Reimbursement_Item__c/fields/Has_Vision__c.field-meta.xml
<CustomField>
    <fullName>Has_Vision__c</fullName>
    <formula
  >AND(NOT(ISNULL(Budget_Item__r.Vision__c)), Budget_Item__r.Vision__c &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Vision</label>
    <type>Checkbox</type>
</CustomField>