force-app/main/default/objects/Reimbursement_Item__c/fields/Has_Workers_Comp__c.field-meta.xml
<CustomField>
    <fullName>Has_Workers_Comp__c</fullName>
    <formula
  >AND(NOT(ISNULL(Budget_Item__r.Workers_Comp__c)), Budget_Item__r.Workers_Comp__c &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Workers Comp</label>
    <type>Checkbox</type>
</CustomField>