force-app/main/default/objects/Reimbursement_Item__c/fields/Indirect_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Rate_Amount__c</fullName>
    <label>Indirect Rate Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>