force-app/main/default/objects/Reimbursement_Item__c/fields/Is_Hourly__c.field-meta.xml
<CustomField>
    <fullName>Is_Hourly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hourly</label>
    <type>Checkbox</type>
</CustomField>