force-app/main/default/objects/Reimbursement_Item__c/fields/Long_Term_Disability__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Disability__c</fullName>
    <label>Long Term Disability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>