force-app/main/default/objects/Reimbursement_Item__c/fields/Long_Term_Premium__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Premium__c</fullName>
    <label>Long Term Premium</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>