force-app/main/default/objects/Reimbursement_Item__c/fields/Medical__c.field-meta.xml
<CustomField>
    <fullName>Medical__c</fullName>
    <label>Medical</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>