force-app/main/default/objects/Reimbursement_Item__c/fields/Medical_Premium__c.field-meta.xml
<CustomField>
    <fullName>Medical_Premium__c</fullName>
    <label>Medical Premium</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>