force-app/main/default/objects/Reimbursement_Item__c/fields/Mileage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Rate__c</fullName>
    <label>Mileage Rate</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>