force-app/main/default/objects/Reimbursement_Item__c/fields/Other_Percent__c.field-meta.xml
<CustomField>
    <fullName>Other_Percent__c</fullName>
    <label>Other Percent</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>