force-app/main/default/objects/Reimbursement_Item__c/fields/Other_Percent_Based__c.field-meta.xml
<CustomField>
    <fullName>Other_Percent_Based__c</fullName>
    <label>Other Percent Based</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>