force-app/main/default/objects/Reimbursement_Item__c/fields/Pay_Period__c.field-meta.xml
<CustomField>
    <fullName>Pay_Period__c</fullName>
    <label>Pay Period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>