force-app/main/default/objects/Reimbursement_Item__c/fields/Percent_Towards_Grant__c.field-meta.xml
<CustomField>
    <fullName>Percent_Towards_Grant__c</fullName>
    <label>Percent Towards Grant</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>