force-app/main/default/objects/Reimbursement_Item__c/fields/Personnel_Percent_Towards_Grant__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Percent_Towards_Grant__c</fullName>
    <label>Personnel Percent Towards Grant</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>