force-app/main/default/objects/Reimbursement_Item__c/fields/Personnel_Quantity_Towards_Grant__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Quantity_Towards_Grant__c</fullName>
    <label>Personnel Quantity Towards Grant</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>