force-app/main/default/objects/Reimbursement_Item__c/fields/Personnel_Requested_Salary__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Requested_Salary__c</fullName>
    <label>Personnel Requested Salary</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>