force-app/main/default/objects/Reimbursement_Item__c/fields/Quantity_Towards_Grant__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Towards_Grant__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity Towards Grant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>