force-app/main/default/objects/Reimbursement_Item__c/fields/Reimbursement_Item__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reimbursement Item</label>
    <referenceTo>Reimbursement_Item__c</referenceTo>
    <relationshipLabel>Reimbursement Items</relationshipLabel>
    <relationshipName>Reimbursement_Items</relationshipName>
    <type>Lookup</type>
</CustomField>