force-app/main/default/objects/Reimbursement_Item__c/fields/Reimbursement_Request__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Request__c</fullName>
    <label>Reimbursement Request</label>
    <referenceTo>Reimbursement_Request__c</referenceTo>
    <relationshipLabel>Reimbursement Items</relationshipLabel>
    <relationshipName>Reimbursement_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>