force-app/main/default/objects/Reimbursement_Item__c/fields/Reimbursement_Status__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Status__c</fullName>
    <formula>TEXT(Reimbursement_Request__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reimbursement Status</label>
    <type>Text</type>
</CustomField>