force-app/main/default/objects/Reimbursement_Item__c/fields/Reimbursement_Status_for_Formula_Fields__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Status_for_Formula_Fields__c</fullName>
    <label>Reimbursement Status for Formula Fields</label>
    <length>100</length>
    <type>Text</type>
</CustomField>