force-app/main/default/objects/Reimbursement_Item__c/fields/Related_Item__c.field-meta.xml
<CustomField>
    <fullName>Related_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Reimbursement Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Reimbursement_Request__c</field>
            <operation>equals</operation>
            <valueField
      >Reimbursement_Item__c.Reimbursement_Request__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Reimbursement_Item__c</referenceTo>
    <relationshipLabel>Related Items</relationshipLabel>
    <relationshipName>Related_Items</relationshipName>
    <type>Lookup</type>
</CustomField>