force-app/main/default/objects/Reimbursement_Item__c/fields/Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Amount__c</fullName>
    <label>Requested Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>