force-app/main/default/objects/Reimbursement_Item__c/fields/Requested_Amount_hold__c.field-meta.xml
<CustomField>
    <fullName>Requested_Amount_hold__c</fullName>
    <formula>Rate__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rate * Quantity</inlineHelpText>
    <label>Requested Amount Calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>