force-app/main/default/objects/Reimbursement_Item__c/fields/Requested_Amount_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Requested_Amount_Submitted__c</fullName>
    <formula
  >IF(ISPICKVAL(Reimbursement_Request__r.Status__c, &apos;Incomplete&apos;), 0, Requested_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Requested Amount unless Reimbursement Status = Incomplete, then Requested Amount Submitted = 0;</inlineHelpText>
    <label>Requested Amount Submitted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>