force-app/main/default/objects/Reimbursement_Item__c/fields/Requested_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Requested_Benefits__c</fullName>
    <label>Requested Benefits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>