force-app/main/default/objects/Reimbursement_Item__c/fields/Retirement__c.field-meta.xml
<CustomField>
    <fullName>Retirement__c</fullName>
    <label>Retirement</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>