force-app/main/default/objects/Reimbursement_Item__c/fields/Short_Term_Disability__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Disability__c</fullName>
    <label>Short Term Disability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>