force-app/main/default/objects/Reimbursement_Item__c/fields/Status_Fields_Matching__c.field-meta.xml
<CustomField>
    <fullName>Status_Fields_Matching__c</fullName>
    <formula
  >Reimbursement_Status_for_Formula_Fields__c = Reimbursement_Status__c</formula>
    <label>Status Fields Matching?</label>
    <type>Checkbox</type>
</CustomField>