force-app/main/default/objects/Reimbursement_Item__c/fields/SUTA__c.field-meta.xml
<CustomField>
    <fullName>SUTA__c</fullName>
    <label>SUTA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>