force-app/main/default/objects/Reimbursement_Item__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Budget_Item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Budget Item Name</inlineHelpText>
    <label>Title</label>
    <type>Text</type>
</CustomField>