force-app/main/default/objects/Reimbursement_Item__c/fields/Total_Approved_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Total_Approved_Benefits__c</fullName>
    <description
  >IGNORE - This is needed to match budget item but not used in portals</description>
    <label>Total Approved Benefits</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>