force-app/main/default/objects/Reimbursement_Item__c/fields/Total_Related_Item_Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Related_Item_Requested_Amount__c</fullName>
    <label>Total Related Item Requested Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>