force-app/main/default/objects/Reimbursement_Item__c/fields/Vision__c.field-meta.xml
<CustomField>
    <fullName>Vision__c</fullName>
    <label>Vision</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>