force-app/main/default/objects/Reimbursement_Item__c/fields/Workers_Comp__c.field-meta.xml
<CustomField>
    <fullName>Workers_Comp__c</fullName>
    <label>Workers Comp</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>