force-app/main/default/objects/Reimbursement_Item__c/fields/Workers_Comp_Percent__c.field-meta.xml
<CustomField>
    <fullName>Workers_Comp_Percent__c</fullName>
    <label>Workers Comp Percent</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>