force-app/main/default/objects/Reimbursement_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Budget_Item__c</columns>
    <columns>Reimbursement_Request__c</columns>
    <columns>Reimbursement_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>